--- a/posts/templates/login_email.html
+++ b/posts/templates/login_email.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Your Login Token</title>
+    <title>Log Into JournalTown</title>
 </head>
 <body>
-    <h2>Just follow this <a href="{{protocol}}://{{ web_origin }}/login?token={{ callback_token }}">link</a>.</h2>
+    <h2>Just follow this <a href="{{protocol}}://{{ web_origin }}/?token={{ callback_token }}">link</a>.</h2>
 
-    Having trouble with the link? Paste {{protocol}}://{{ web_origin }}/login?token={{ callback_token }} into your web browser.
+    Having trouble with the link? Paste {{protocol}}://{{ web_origin }}/?token={{ callback_token }} into your web browser.
 </body>
 </html>
